add mass action refs

--- a/docs/proposal.bib
+++ b/docs/proposal.bib
@@ -101,6 +101,18 @@
 }
 
 
+@article{Aldridge2006,
+  title={Physicochemical modelling of cell signalling pathways},
+  author={Aldridge, Bree B and Burke, John M and Lauffenburger, Douglas A and Sorger, Peter K},
+  journal={Nature cell biology},
+  volume=8,
+  number=11,
+  pages={1195--1203},
+  year=2006,
+  publisher={Nature Publishing Group}
+}
+
+
 @MISC{Banks2012, url = {http://www.jove.com/video/4018/a-quantitative-fitness-analysis-workflow}, title = {A Quantitative Fitness Analysis Workflow}, journal = {JoVE (Journal of Visualized Experiments)}, YEAR = 2012, howpublished = {\url{http://www.jove.com/video/4018/a-quantitative-fitness-analysis-workflow}}, author = {Banks, A.P. and Lawless, C. and Lydall, D.A.}, archived = {http://greycite.knowledgeblog.org/?uri=http%3A%2F%2Fwww.jove.com%2Fvideo%2F4018%2Fa-quantitative-fitness-analysis-workflow, http://wayback.archive.org/web/http://www.jove.com/video/4018/a-quantitative-fitness-analysis-workflow}, }
 
 
@@ -151,6 +163,21 @@ url={http://search.proquest.com/docview/815144256?accountid=12753},
 }
 }
 
+@article{Berryman1992,
+ ISSN = {00129658, 19399170},
+ URL = {http://www.jstor.org/stable/1940005},
+ abstract = {Predator-prey theory is traced from its origins in the Malthus-Verhulst logistic equations, through the Lotka-Volterra equations, logistic modifications to both prey and predator equations, incorporation of the Michaelis-Menten-Holling functional response into the predator and prey equations, and the recent development of ratio-dependent functional responses and per-capita rate of change functions. Some of the problems of classical predator--prey theory, including the paradoxes of enrichment and biological control, seem to have been caused by the application of the principle of mass action to predator--prey interactions. Predator--prey models that evolved from logistic theory or that incorporate ratio-dependent functional responses do not have these problems and also seem to be more biologically plausible.},
+ author = {Alan A. Berryman},
+ journal = {Ecology},
+ number = 5,
+ pages = {1530-1535},
+ publisher = {Ecological Society of America},
+ title = {The Orgins and Evolution of Predator-Prey Theory},
+ volume = 73,
+ year = 1992
+}
+
+
 @article{Bornstein2008,
 author = {Bornstein, Benjamin J. and Keating, Sarah M. and Jouraku, Akiya and Hucka, Michael},
 title = {LibSBML: an API Library for SBML},
@@ -178,6 +205,17 @@ abstract = {Summary: LibSBML is an application programming interface
 URL = {http://bioinformatics.oxfordjournals.org/content/24/6/880.abstract},
 eprint = {http://bioinformatics.oxfordjournals.org/content/24/6/880.full.pdf+html},
 journal = {Bioinformatics}
+}
+
+@article{Chen2010,
+  title={Classic and contemporary approaches to modeling biochemical reactions},
+  author={Chen, William W and Niepel, Mario and Sorger, Peter K},
+  journal={Genes \& development},
+  volume=24,
+  number=17,
+  pages={1861--1875},
+  year=2010,
+  publisher={Cold Spring Harbor Lab}
 }
 
 
@@ -285,6 +323,17 @@ year = 2010
   volume=225,
   pages={229--272},
   year=2003,
+  publisher={Elsevier}
+}
+
+@article{savageau1995,
+  title={Michaelis-Menten mechanism reconsidered: implications of fractal kinetics},
+  author={Savageau, Michael A},
+  journal={Journal of theoretical biology},
+  volume=176,
+  number=1,
+  pages={115--124},
+  year=1995,
   publisher={Elsevier}
 }
 
