Add genome-scale interaction ref

--- a/docs/proposal.bib
+++ b/docs/proposal.bib
@@ -218,6 +218,17 @@ journal = {Bioinformatics}
   publisher={Cold Spring Harbor Lab}
 }
 
+@article{Costanzo2010,
+  title={The genetic landscape of a cell},
+  author={Costanzo, Michael and Baryshnikova, Anastasia and Bellay, Jeremy and Kim, Yungil and Spear, Eric D and Sevier, Carolyn S and Ding, Huiming and Koh, Judice LY and Toufighi, Kiana and Mostafavi, Sara and others},
+  journal={science},
+  volume=327,
+  number=5964,
+  pages={425--431},
+  year=2010,
+  publisher={American Association for the Advancement of Science}
+}
+
 
 @article{fujita2006,
   title={The genome-wide screening of yeast deletion mutants to identify the genes required for tolerance to ethanol and other alcohols},
