Add interaction strength refs

--- a/docs/proposal.bib
+++ b/docs/proposal.bib
@@ -229,6 +229,17 @@ journal = {Bioinformatics}
   publisher={American Association for the Advancement of Science}
 }
 
+@article{fisher1919,
+  title={XV.—The correlation between relatives on the supposition of Mendelian inheritance.},
+  author={Fisher, Ronald A},
+  journal={Transactions of the royal society of Edinburgh},
+  volume=52,
+  number=02,
+  pages={399--433},
+  year=1919,
+  publisher={Cambridge Univ Press}
+}
+
 
 @article{fujita2006,
   title={The genome-wide screening of yeast deletion mutants to identify the genes required for tolerance to ethanol and other alcohols},
@@ -315,6 +326,18 @@ url = {http://dx.doi.org/10.1186/1471-2105-11-287},
 volume = 11,
 year = 2010
 }
+
+@article{Mani2008,
+  title={Defining genetic interaction},
+  author={Mani, Ramamurthy and Onge, Robert P St and Hartman, John L and Giaever, Guri and Roth, Frederick P},
+  journal={Proceedings of the National Academy of Sciences},
+  volume=105,
+  number=9,
+  pages={3461--3466},
+  year=2008,
+  publisher={National Acad Sciences}
+}
+
 
 @article{palkova1997,
   title={Ammonia mediates communication between yeast colonies},
