Add missing refs

--- a/docs/proposal.bib
+++ b/docs/proposal.bib
@@ -112,8 +112,33 @@
   publisher={Nature Publishing Group}
 }
 
+@article{Andrew2013,
+    author = {Andrew, Elizabeth J. AND Merchan, Stephanie AND Lawless, Conor AND Banks, A. Peter AND Wilkinson, Darren J. AND Lydall, David},
+    journal = {PLoS ONE},
+    publisher = {Public Library of Science},
+    title = {Pentose Phosphate Pathway Function Affects Tolerance to the G-Quadruplex Binder TMPyP4},
+    year = 2013,
+    month = 06,
+    volume = 8,
+    url = {http://dx.doi.org/10.1371%2Fjournal.pone.0066242},
+    pages = {1-10},
+    abstract = {<p>G-quadruplexes form in guanine-rich regions of DNA and the presence of these structures at telomeres prevents the activity of telomerase <italic>in vitro</italic>. Ligands such as the cationic porphyrin TMPyP4 stabilise G-quadruplexes and are therefore under investigation for their potential use as anti-cancer drugs. In order to investigate the mechanism of action of TMPyP4 <italic>in vivo</italic>, we carried out a genome-wide screen in the budding yeast <italic>Saccharomyces cerevisiae</italic>. We found that deletion of key pentose phosphate pathway (PPP) genes increased the sensitivity of yeast to the presence of TMPyP4. The PPP plays an important role in the oxidative stress response and sensitivity to TMPyP4 also increased when genes involved in the oxidative stress response, <italic>CCS1</italic> and <italic>YAP1</italic>, were deleted. For comparison we also report genome wide-screens using hydrogen peroxide, which causes oxidative stress, RHPS4, another G-quadruplex binder and hydroxyurea, an S phase poison. We found that a number of TMPyP4-sensitive strains are also sensitive to hydrogen peroxide in a genome-wide screen. Overall our results suggest that treatment with TMPyP4 results in light-dependent oxidative stress response in budding yeast, and that this, rather than G-quadruplex binding, is the major route to cytotoxicity. Our results have implications for the usefulness and mechanism of action of TMPyP4.</p>},
+    number = 6,
+    doi = {10.1371/journal.pone.0066242}
+}
+
 
 @MISC{Banks2012, url = {http://www.jove.com/video/4018/a-quantitative-fitness-analysis-workflow}, title = {A Quantitative Fitness Analysis Workflow}, journal = {JoVE (Journal of Visualized Experiments)}, YEAR = 2012, howpublished = {\url{http://www.jove.com/video/4018/a-quantitative-fitness-analysis-workflow}}, author = {Banks, A.P. and Lawless, C. and Lydall, D.A.}, archived = {http://greycite.knowledgeblog.org/?uri=http%3A%2F%2Fwww.jove.com%2Fvideo%2F4018%2Fa-quantitative-fitness-analysis-workflow, http://wayback.archive.org/web/http://www.jove.com/video/4018/a-quantitative-fitness-analysis-workflow}, }
+
+@article{Baryshnikova2010sga,
+  title={Synthetic genetic array (SGA) analysis in Saccharomyces cerevisiae and Schizosaccharomyces pombe},
+  author={Baryshnikova, Anastasia and Costanzo, Michael and Dixon, Scott and Vizeacoumar, Franco J and Myers, Chad L and Andrews, Brenda and Boone, Charles},
+  journal={Methods in enzymology},
+  volume=470,
+  pages={145--179},
+  year=2010,
+  publisher={Elsevier}
+}
 
 
 @article{Baryshnikova2010,
@@ -177,6 +202,14 @@ url={http://search.proquest.com/docview/815144256?accountid=12753},
  year = 1992
 }
 
+@article{BioModels2015b,
+  author  = {Juty, Nick and Ali, Raza and Glont, Mihai and Keating, Sarah and Rodriguez, Nicolas and Swat, Maciej J.
+             and Wimalaratne, Sarala M. and  Hermjakob, Henning and Le Nov{\`e}re, Nicolas and Laibe, Camille and Chelliah, Vijayalakshmi},
+  title   = {{BioModels: Content, Features, Functionality and Use.}},
+  journal = {CPT: Pharmacometrics \& Systems Pharmacology},
+  year    = 2015,
+  doi     = {10.1002/psp4.3}
+}
 
 @article{Bornstein2008,
 author = {Bornstein, Benjamin J. and Keating, Sarah M. and Jouraku, Akiya and Hucka, Michael},
@@ -230,7 +263,7 @@ journal = {Bioinformatics}
 }
 
 @article{fisher1919,
-  title={XV.—The correlation between relatives on the supposition of Mendelian inheritance.},
+  title={The correlation between relatives on the supposition of Mendelian inheritance.},
   author={Fisher, Ronald A},
   journal={Transactions of the royal society of Edinburgh},
   volume=52,
@@ -298,6 +331,30 @@ abstract = {Quantitative fitness analysis (QFA) is a high throughput
   publisher={Am Soc Microbiol}
 }
 
+@article{Hucka2003,
+author = {Hucka, M. and Finney, A. and Sauro, H. M. and Bolouri, H. and Doyle, J. C. and Kitano, H. and and the rest of the SBML Forum: and Arkin, A. P. and Bornstein, B. J. and Bray, D. and Cornish-Bowden, A. and Cuellar, A. A. and Dronov, S. and Gilles, E. D. and Ginkel, M. and Gor, V. and Goryanin, I. I. and Hedley, W. J. and Hodgman, T. C. and Hofmeyr, J.-H. and Hunter, P. J. and Juty, N. S. and Kasberger, J. L. and Kremling, A. and Kummer, U. and Le Novère, N. and Loew, L. M. and Lucio, D. and Mendes, P. and Minch, E. and Mjolsness, E. D. and Nakayama, Y. and Nelson, M. R. and Nielsen, P. F. and Sakurada, T. and Schaff, J. C. and Shapiro, B. E. and Shimizu, T. S. and Spence, H. D. and Stelling, J. and Takahashi, K. and Tomita, M. and Wagner, J. and Wang, J.},
+title = {The systems biology markup language (SBML): a medium for representation and exchange of biochemical network models},
+volume = 19,
+number = 4,
+pages = {524-531},
+year = 2003,
+doi = {10.1093/bioinformatics/btg015},
+abstract ={Motivation: Molecular biotechnology now makes it possible to build
+elaborate systems models, but the systems biology community needs
+information standards if models are to be shared, evaluated and developed
+cooperatively.Results: We summarize the Systems Biology Markup Language (SBML)
+Level 1, a free, open, XML-based format for representing biochemical
+reaction networks.  SBML is a software-independent language for describing
+models common to research in many areas of computational biology, including
+cell signaling pathways, metabolic pathways, gene regulation, and others.Availability: The specification of SBML Level 1 is freely
+available from http://www.sbml.org/Contact: sysbio-team@caltech.edu
+
+      },
+URL = {http://bioinformatics.oxfordjournals.org/content/19/4/524.abstract},
+eprint = {http://bioinformatics.oxfordjournals.org/content/19/4/524.full.pdf+html},
+journal = {Bioinformatics}
+}
+
 
 @article{Lawless2010,
 abstract = {High-throughput screens comparing growth rates of arrays
@@ -338,6 +395,31 @@ year = 2010
   publisher={National Acad Sciences}
 }
 
+@article{MIASE2011,
+    author = {Waltemath, Dagmar AND Adams, Richard AND Beard, Daniel A. AND Bergmann, Frank T. AND Bhalla, Upinder S. AND Britten, Randall AND Chelliah, Vijayalakshmi AND Cooling, Michael T. AND Cooper, Jonathan AND Crampin, Edmund J. AND Garny, Alan AND Hoops, Stefan AND Hucka, Michael AND Hunter, Peter AND Klipp, Edda AND Laibe, Camille AND Miller, Andrew K. AND Moraru, Ion AND Nickerson, David AND Nielsen, Poul AND Nikolski, Macha AND Sahle, Sven AND Sauro, Herbert M. AND Schmidt, Henning AND Snoep, Jacky L. AND Tolle, Dominic AND Wolkenhauer, Olaf AND Le Novère, Nicolas},
+    journal = {PLoS Comput Biol},
+    publisher = {Public Library of Science},
+    title = {Minimum Information About a Simulation Experiment (MIASE)},
+    year = 2011,
+    month = 04,
+    volume = 7,
+    url = {http://dx.doi.org/10.1371%2Fjournal.pcbi.1001122},
+    pages = {1-4},
+    number = 4,
+    doi = {10.1371/journal.pcbi.1001122}
+}
+
+@article{MIRIAM2005,
+  title={Minimum information requested in the annotation of biochemical models (MIRIAM)},
+  author={Le Nov{\`e}re, Nicolas and Finney, Andrew and Hucka, Michael and Bhalla, Upinder S and Campagne, Fabien and Collado-Vides, Julio and Crampin, Edmund J and Halstead, Matt and Klipp, Edda and Mendes, Pedro and others},
+  journal={Nature biotechnology},
+  volume={23},
+  number={12},
+  pages={1509--1515},
+  year={2005},
+  publisher={Nature Publishing Group}
+}
+
 
 @article{palkova1997,
   title={Ammonia mediates communication between yeast colonies},
@@ -360,6 +442,30 @@ year = 2010
   publisher={Elsevier}
 }
 
+@article{PyMC2010,
+   author = {Anand Patil and David Huard and Christopher Fonnesbeck},
+   title = {PyMC: Bayesian Stochastic Modelling in Python},
+   journal = {Journal of Statistical Software},
+   volume = 35,
+   number = 1,
+   year = 2010,
+   abstract = {This user guide describes a Python package, PyMC, that allows users to efficiently code a probabilistic model and draw samples from its posterior distribution using Markov chain Monte Carlo techniques.},
+   issn = {1548-7660},
+   pages = {1--81},
+   doi = {10.18637/jss.v035.i04},
+   url = {https://www.jstatsoft.org/index.php/jss/article/view/v035i04}
+}
+
+@Manual{qfa2016,
+    title = {qfa: Tools for Quantitative Fitness Analysis (QFA) of Arrayed
+Microbial Cultures Growing on Solid Agar Surfaces},
+    author = {Conor Lawless and with contributions from Alexander Young and Darren Wilkinson},
+    year = 2016,
+    note = {R package version 0.0-42/r678},
+    url = {https://R-Forge.R-project.org/projects/qfa/},
+}
+
+
 @article{savageau1995,
   title={Michaelis-Menten mechanism reconsidered: implications of fractal kinetics},
   author={Savageau, Michael A},
@@ -379,6 +485,14 @@ year = 2010
   url = "http://www.scipy.org/",
   note = {[Online; accessed 2016-04-08]}
 }
+
+@Misc{Stan,
+  author = {Stan-Development-Team},
+  title = {{PyStan}: the {Python} interface to {Stan}, Version 2.9.0.},
+  year = 2016,
+  url = "http://mc-stan.org"
+}
+
 
 @article{sprague2006,
   title={Eukaryotes learn how to count: quorum sensing by yeast},
@@ -400,4 +514,11 @@ title = {Recherches mathématiques sur la loi d'accroissement de la population.}
 url = {http://eudml.org/doc/182533},
 volume = 18,
 year = 1845,
+}
+
+@book{Wilkinson2011,
+  title={Stochastic modelling for systems biology},
+  author={Wilkinson, Darren J},
+  year=2011,
+  publisher={CRC press}
 }
